--- a/notebooks/instructions.ipynb
+++ b/notebooks/instructions.ipynb
@@ -92,11 +92,11 @@
     "source tfx-env/bin/activate\n",
     "mkdir tfx; cd tfx\n",
     "\n",
-    "git clone https://github.com/rcrowe-google/TFX-DevSummit-2019.git\n",
+    "git clone https://github.com/alkari/tfx-lab.git\n",
     "\n",
     "pip install tensorflow\n",
     "pip install tfx==0.12.0rc0\n",
-    "cd TFX-DevSummit-2019/setup\n",
+    "cd tfx-lab/setup\n",
     "./setup_demo.sh\n",
     "```\n",
     "\n",
@@ -365,6 +365,43 @@
     "\n",
     "![Deployment to production](images/step7.png)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! sudo apt install docker.io\n",
+    "! sudo usermod -aG docker ${USER}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! docker run -d -p 8501:8501 --name tf-serve -v ~/airflow/data/tfx/pipelines/serving_model:/models \\\n",
+    "        tensorflow/serving --model_base_path=/models/taxi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or run interactively.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! docker run -p 8501:8501 --name tf-serve -v ~/airflow/data/tfx/pipelines/serving_model:/models \\\n",
+    "        -t tensorflow/serving --model_base_path=/models/taxi"
+   ]
   }
  ],
  "metadata": {
@@ -383,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.15rc1"
   }
  },
  "nbformat": 4,
